 * Removed bunch of unused CGI scripts
 * Moved /users/staff/export to users/export so that /users/staff could
    be removed.
 * Tidied help text and plugin-list output for import and export bins.

2006-11-20 cjg
 * Changed METS to call getChildNodes rather than childNodes

2006-11-20 moj
 * Added inital version of event_by_name (passes back the event
    type, but this isn't handled by the autocompleter script 
    yet)

2006-11-20 cjg
 * Added recommit functionality to epadmin

2006-11-20 tmb
 * Moved "Request a Copy" scripts to screens

2006-11-21 cjg
 * Removed a whole bunch of unused cgi scripts
 * Moved all admin tools into epadmin

2006-11-21 cjg
 * Feeds are now rendered as links in the export bar.
 * Added some padding to the icons in message windows.

2006-11-21 cjg
 * Redrew up & down sorting arrows
 * Redrew up & down multi-row rearranging arrows and changed the layout.
 * Added vertical aligning to +/- icons.
 * Redrew +/- icons
 * Redrew required star icon
 * Added an example image for other icons
 * Redrew delete file/document X icon.

2006-11-21 moj
 * Fixed small bug in Convert.pm (if split on mime type returned
    undef)
 * Added link to repository version from View.pm (if item is in
    live archive).

2006-11-21 moj
 * Added indexer queue size to Status.pm

2006-11-21 cjg
 * Fixed issue in list that it warns if a cache should have been dropped
    and wasn't but couldn't be as the database had already been GC'd
 * Date didn't supress enter in the year input field. Now does.
 * Changed show/hide help to a [?] mark
 * Redesigned Upload component
 * Added new javascript Slide toggle which centers on the toggled thing.
 * New upload and collapsed component-show uses it.
 * Changed and onClick to be onclick
 * Renamed Files stage to Upload
 * Fixed pins in placeholder - they were not DOM
 * Changed the lines between bits in the blister into arrows.
 * Messed up import (will fix asap)
 
2006-11-22 cjg
 * Fixed import and it now obeys --user