@@ -512,18 +512,19 @@ User Area CGI Scripts
     <epp:phrase id="cgi/login:page_layout">
       <epc:pin name="problems"/>
       <div class="ep_block">
-        <p>Please enter your username and password.</p>
+        <p>Please enter your username and password. <epc:pin name="reset_link" /></p>
         <table style="margin:auto">
           <tr><td>Username:</td><td><epc:pin name="input_username"/></td></tr>
           <tr><td>Password:</td><td><epc:pin name="input_password"/></td><td><epc:pin name="login_button"/></td></tr>
         </table>
       </div>
     </epp:phrase>
+    <epp:phrase id="cgi/login:reset_link">If you have forgotten your password, you may <a href="{$config{perl_url}}/reset_password">reset</a> it.</epp:phrase>
     <epp:phrase id="cgi/login:until_close">until the browser closes</epp:phrase>
     <epp:phrase id="cgi/login:forever">forever (until I log out)</epp:phrase>
     <epp:phrase id="cgi/login:bind">yes (more secure)</epp:phrase>
     <epp:phrase id="cgi/login:dont_bind">no (more convenient)</epp:phrase>
-	<epp:phrase id="cgi/login:failed">Incorrect username or password. If you have forgotten your password, you may <a href="{$config{perl_url}}/reset_password">reset</a> it.</epp:phrase>
+    <epp:phrase id="cgi/login:failed">Incorrect username or password.</epp:phrase>
     <epp:phrase id="cgi/login:logged_in_as"><p>You are already logged in as <epc:pin name="name"/>.</p> <p>If you wish to log in as a different user you must <a href="{$config{perl_url}}/users/logout">Logout</a> first.</p></epp:phrase>
     <epp:phrase id="cgi/login:title">Login</epp:phrase>
     <epp:phrase id="cgi/login:message">Login successful.</epp:phrase>
